turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:6: error: not found: value setCouleurSol
       setCouleurSol(rule(state)(c)(1));
       ^